--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.8.4"
+  },
+  "devDependencies": {
+    "prettier": "2.7.1"
   }
 }
