--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "typescript": "4.8.4"
   },
   "devDependencies": {
-    "prettier": "2.7.1"
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "prettier": "2.7.1",
+    "tailwindcss": "^3.2.4"
   }
 }
