--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@kubernetes/client-node": "^0.17.1",
+    "@mui/material": "^5.10.14",
+    "@mui/x-data-grid": "^5.17.12",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
+    "dayjs": "^1.11.6",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
     "next": "13.0.2",
