--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dayjs": "^1.11.6",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
+    "jwt-decode": "^3.1.2",
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
