--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "keycloak-js": "^20.0.1",
-    "next": "13.0.2",
+    "next": "^13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.8.4",
