--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@kubernetes/client-node": "^0.17.1",
     "@mui/material": "^5.10.14",
     "@mui/x-data-grid": "^5.17.12",
+    "@tanstack/react-query": "^4.19.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
