--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "^13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.1",
     "typescript": "4.8.4",
     "uuid": "^9.0.0"
   },
