--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@kubernetes/client-node": "^0.17.1",
     "@mui/material": "^5.10.14",
     "@mui/x-data-grid": "^5.17.12",
+    "@prisma/client": "^4.8.0",
     "@tanstack/react-query": "^4.19.1",
     "@tanstack/react-query-devtools": "^4.19.1",
     "@types/node": "18.11.9",
@@ -38,6 +39,7 @@
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "prettier": "2.7.1",
+    "prisma": "^4.8.0",
     "tailwindcss": "^3.2.4"
   }
 }
