--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
     "axios": "^1.2.1",
+    "chart.js": "^4.1.1",
+    "chartjs": "^0.3.24",
     "dayjs": "^1.11.6",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
@@ -29,6 +31,7 @@
     "next": "^13.0.5",
     "pg": "^8.8.0",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.1.0",
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.1",
     "typescript": "4.8.4",
