--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.2.1",
     "chart.js": "^4.1.1",
     "chartjs": "^0.3.24",
+    "chartjs-plugin-annotation": "^2.1.2",
     "dayjs": "^1.11.6",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
