--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "@types/pg": "^8.6.6",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
-    "prettier": "2.7.1",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.2.2",
     "tailwindcss": "^3.2.4"
   }
 }
