fix eslint-prettier conflict. lint the project

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/jsonwebtoken": "^8.5.9",
     "@types/pg": "^8.6.6",
     "autoprefixer": "^10.4.13",
+    "eslint-config-prettier": "^8.6.0",
     "postcss": "^8.4.19",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.2.2",
