--- a/helm/charts/templates/deployment.yaml
+++ b/helm/charts/templates/deployment.yaml
@@ -1,23 +1,24 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Values.deployName }}
-  namespace: {{ .Values.namespace }}
+  name: { { .Values.deployName } }
+  namespace: { { .Values.namespace } }
 spec:
-  replicas: {{ .Values.replicaCount }}
+  replicas: { { .Values.replicaCount } }
   selector:
     matchLabels:
-      app.kubernetes.io/name: {{ .Values.serviceName }}
+      app: { { .Values.serviceName } }
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: {{ .Values.serviceName }}
+        app: { { .Values.serviceName } }
     spec:
       containers:
-      {{- range $v := .Values.different_images }}
-      - name: {{ $v.name }} 
-        image: {{ $v.image }} 
-        imagePullPolicy: IfNotPresent
-        ports:
-        - containerPort: {{ $v.port }} 
-      {{- end }}
+        - name: node-app
+          image: { { .Values.app.image } }
+          ports:
+            - containerPort: { { .Values.app.port } }
+        - name: stats-db
+          image: { { .Values.db.image } }
+          ports:
+            - containerPort: { { .Values.db.port } }
