--- a/helm/charts/values.yaml
+++ b/helm/charts/values.yaml
@@ -2,10 +2,9 @@ deployName: dashboard-deploy
 serviceName: dashboard-service
 replicaCount: 1
 namespace: theiacloud
-different_images: 
-  - name: dashboard-app
-    image: sevvalekici/nextjs-docker
-    port: 3000
-  - name: stats-db
-    port: 9000
-    image: questdb/questdb:6.6.1
+app:
+  image: sevvalekici/nextjs-docker:latest
+  port: 3000
+db:
+  image: questdb/questdb:latest
+  port: 9000
